fixed use-http hook, made it shorter and more readable

--- a/src/components/weatherCard/WeatherData/WeatherDetail.module.css
+++ b/src/components/weatherCard/WeatherData/WeatherDetail.module.css
@@ -8,3 +8,7 @@
 .description {
     font-size: 5rem;
 }
+
+.span {
+    font-size: 2.5rem;
+}
